Implement more stuff for the API page

--- a/pages/docs/development/api.mdx
+++ b/pages/docs/development/api.mdx
@@ -1,11 +1,89 @@
+import {Callout, Tab, Tabs} from "nextra-theme-docs";
+
 # SkinsRestorer API
-To make things easy, we created an example plugin that connects to the coding API that can be found
-here: [[link](https://github.com/SkinsRestorer/SkinsRestorerAPIExample)]
 
-#### When using BungeeCord/Velocity?
+SkinsRestorer has a public API that can be used by other plugins to interact with SkinsRestorer.
 
-If you are using BungeeCord/Velocity, you must have a plugin that calls to the API on BungeeCord/Velocity. You would need
-to use in/out put channels to send this information across both of your custom plugins.
+<Callout type="warning" emoji="🚨">
+    Please note that this API is still work-in-progress. Expect breaking changes!
+</Callout>
+
+## Resources
+
+You can find useful resources to the SkinsRestorer API below:
+
+* [Example Plugin](https://github.com/SkinsRestorer/SkinsRestorerAPIExample)
+* [Javadocs](https://docs.skinsrestorer.net)
+
+## Add to your build file
+
+Here is an example of how to add the API to your build file. Select your build tool below.
+
+Latest Version (Without the v):
+![Latest Version](https://img.shields.io/github/v/tag/SkinsRestorer/SkinsRestorerX?label=version)
+
+<Tabs items={['Maven', 'Gradle (Groovy)', 'Gradle (Kotlin)']}>
+    <Tab>
+        Add the following repository and dependency to your `pom.xml` file:
+
+        ```xml
+        <repositories>
+            <repository>
+                <id>codemc</id>
+                <url>https://repo.codemc.org/repository/maven-public/</url>
+            </repository>
+        </repositories>
+
+        <dependencies>
+            <!-- SkinsRestorer API -->
+            <dependency>
+                <groupId>net.skinsrestorer</groupId>
+                <artifactId>skinsrestorer-api</artifactId>
+                <version>VERSION</version>
+                <scope>provided</scope>
+            </dependency>
+        </dependencies>
+        ```
+    </Tab>
+    <Tab>
+        Add the following repository and dependency to your `build.gradle` file:
+
+        ```groovy
+        repositories {
+            maven {
+                name 'codemc'
+                url 'https://repo.codemc.org/repository/maven-public/'
+            }
+        }
+
+        dependencies {
+            // SkinsRestorer API
+            compileOnly 'net.skinsrestorer:skinsrestorer-api:VERSION'
+        }
+        ```
+    </Tab>
+    <Tab>
+        Add the following repository and dependency to your `build.gradle.kts` file:
+
+        ```kotlin
+        repositories {
+            maven("https://repo.codemc.org/repository/maven-public/") {
+                name = "codemc"
+            }
+        }
+
+        dependencies {
+            // SkinsRestorer API
+            compileOnly("net.skinsrestorer:skinsrestorer-api:VERSION")
+        }
+        ```
+    </Tab>
+</Tabs>
+
+## When using BungeeCord/Velocity?
+
+If you are using BungeeCord/Velocity, you must have a plugin that calls the API on BungeeCord/Velocity.
+You would need to use in/out put channels to send this information across both of your custom plugins.
 
 Getting issues?
 
@@ -15,18 +93,18 @@ code (see example code)
 adding `private SkinsRestorerAPI skinsRestorerAPI;` at the start of your class.
 * If you don't know that the issue is causing, include a try catch, so you can print our exceptions using e.print... etc
 
-# Using Plugin Message Channel
+## Using Plugin Message Channel
 
 If you are using BungeeCord/Velocity, and you want your plugin to work from spigot. You could use [*Plugin Message
 Channel*](https://www.spigotmc.org/wiki/bukkit-bungee-plugin-messaging-channel/) to send the commands to bungee cord.
 
 ### Messages list
 
-sr:message is only to "forward" commands from spigot to bungee. This includes cooldown, permissions checks and always
-send feedback to player.
-If you want to run it as a console (without checks), you will have to wait for sr:adminchannel
+`sr:messagechannel` is only to "forward" commands from spigot to bungee.
+This includes cooldown, permissions checks and always sends feedback to player.
+If you want to run it as a console (without checks), you will have to wait for `sr:adminchannel`
 
-To proxy:
+To Proxy:
 
 | Message (sr:messagechannel +) |
 |:-----------------------------:|
@@ -34,7 +112,7 @@ To proxy:
 |          clearSkin p          |
 |         getSkins page         |
 
-To bukkit:
+To Bukkit:
 
 |                    Message                    |
 |:---------------------------------------------:|
