--- a/pages/docs/troubleshooting/launcher-issues.mdx
+++ b/pages/docs/troubleshooting/launcher-issues.mdx
@@ -2,7 +2,11 @@ import {Callout} from "nextra-theme-docs";
 
 # Launcher skin issues
 
+This page contains information about issues with skins in third-party Minecraft launchers.
+
 ## TLauncher
+
+Fix issues with TLauncher overriding your client-side skin.
 
 ### TLauncher is dangerous (Malware)
 
@@ -28,7 +32,7 @@ If you still want to use TLauncher, you can disable the skins feature in the lau
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowFullScreen></iframe>
 
-### Disable or turn off TLauncher skins
+#### Disable or turn off TLauncher skins
 
 1. Open TLauncher
 2. Click on the `Accounts` button
