Update javadoc link

--- a/pages/docs/development/api.mdx
+++ b/pages/docs/development/api.mdx
@@ -13,7 +13,7 @@ SkinsRestorer has a public API that can be used by other plugins to interact wit
 You can find useful resources to the SkinsRestorer API below:
 
 * [Example Plugin](https://github.com/SkinsRestorer/SkinsRestorerAPIExample)
-* [Javadocs](https://docs.skinsrestorer.net)
+* [Javadocs](https://jd.skinsrestorer.net)
 
 ## Add to your build file
 
