Add info about waterfall and forks

--- a/pages/docs/installation/bungeecord.mdx
+++ b/pages/docs/installation/bungeecord.mdx
@@ -13,6 +13,11 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
     This is not required, but you will miss out on some features. Read more below.
 </Callout>
 
+<Callout type="info" emoji="ℹ️">
+    We also support Waterfall instead of BungeeCord. The installation process is the same.
+    Other BungeeCord-like proxies like FlameCord and and Aegis are not "officially" supported, but they should work.
+</Callout>
+
 <Steps>
     ### Download the plugin
     Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
