--- a/pages/docs/troubleshooting/cannot-fetch-new-skins.mdx
+++ b/pages/docs/troubleshooting/cannot-fetch-new-skins.mdx
@@ -2,20 +2,21 @@
 
 If, by running `/sr status` you get the following red message:
 
-`> Plugin currently can't fetch new skins. You might check out our discord at [redacted]`
+`> Plugin currently can't fetch new skins. You might check out our discord at ...`
 
 Then this means your server cannot connect to the APIs the plugin requires to work.
-
----
 
 ## How to fix it?
 
 This is a good question, and you are the right place to get an answer.
 Our plugin needs the following APIs over the following ports to be functional:
 
-| URL                       | Port     |
-|---------------------------|----------|
-| https://api.minetools.eu/ | 443 - 53 |
-| https://api.mojang.com/   | 443 - 53 |
-| https://api.ashcon.app/   | 443 - 53 |
-| https://api.mineskin.org/ | 443 - 53 |
+| URL                       | Port  |
+|---------------------------|-------|
+| https://api.minetools.eu/ | `443` |
+| https://api.mojang.com/   | `443` |
+| https://api.ashcon.app/   | `443` |
+| https://api.mineskin.org/ | `443` |
+
+If you are using a firewall, you need to open these ports to allow the plugin to connect to these APIs.
+You also need to make sure that the port `53` of your DNS server you are using is reachable and working.
