Fix heading on skin url page

--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -2,7 +2,7 @@ import {Steps} from "nextra-theme-docs";
 
 # Skin URL
 
-### Confirm a valid skin
+## Confirm a valid skin
 
 Make sure the URL points to only the valid skin PNG file.
 If you are using imgur, make sure that the url ends with `.png`.
@@ -12,7 +12,7 @@ You can see the image below as reference:
 
 ![Image explaining the right image format](/assets/imgur/valid-format.png)
 
-### Uploading to imgur
+## Uploading to imgur
 
 This time we are going to upload your custom skin format to imgur. Follow the following steps:
 
