Cleanup more pages

--- a/pages/docs/features/placeholderapi.mdx
+++ b/pages/docs/features/placeholderapi.mdx
@@ -1,11 +1,9 @@
-import {Steps} from "nextra-theme-docs";
-
 # PlaceholderAPI
 
 SkinsRestorer supports PlaceholderAPI placeholders. These placeholders are automatically registered with
 PlaceholderAPI when both SkinsRestorer and PlaceholderAPI are installed on the server.
 
-## Placeholders
+## SkinsRestorer Placeholders
 
 Here is a list of all possible placeholders. If a database error occurs, the placeholder will be replaced with
 `Error` and an error message will be logged to the console.
