--- a/pages/docs/troubleshooting.mdx
+++ b/pages/docs/troubleshooting.mdx
@@ -2,7 +2,11 @@ import {Callout} from 'nextra-theme-docs'
 
 # Troubleshooting
 
+SkinsRestorer may sometimes have issues working properly. On this page, you can find some common issues and how to fix them.
+
 ## Basic Troubleshoot
+
+First good steps to make sure you did everything right.
 
 ### Basic Spigot Troubleshooting
 
@@ -33,7 +37,7 @@ steps and see if they're the same for your server
 the [Basic Installation](/docs/installation/bungeecord)
 steps and see if they're the same for your server
 
-2. IF you *did configure spigot* than *remove the SkinsRestorer config.yml*
+2. If you *did configure spigot* than *remove the SkinsRestorer config.yml*
 [SkinsRestorer should never make a config on spigot, if it does your spigot is not set to bungee mode!!]
 
 3. Update the plugin if needed on BungeeCord [(SpigotMC)](https://spigotmc.org/resources/skinsrestorer.2124/)
@@ -49,35 +53,45 @@ steps and see if they're the same for your server
 
 ## Advanced Troubleshoot
 
+For advanced troubleshooting, you need to have access to your server files and know how to use them.
+
 ### Commands not working
 
 If commands aren't working, you need to make sure that you did follow our specific installation instructions. If it
-still doesn't work, try removing the config and messages and restart your bungee and if not bungee your spigot server.
-For perms check our permission section.
+still doesn't work, try removing the config and messages and restart your proxy, and if you don't have a proxy, your Spigot/Sponge server.
 
 ### Plugin incompatibility
 
-Some not well-coded plugins or plugins that modify the user profile mightn't work well with SkinsRestorer.
-You can see this when you, for example, change a skin, and you see the chunks reload but your skin just won't apply...
+Some not-well-coded plugins or plugins that modify the user profile mightn't work well with SkinsRestorer.
+You can see this when you, for example, change a skin, and you see the chunks reload, but your skin just won't apply.
 
-*List of known incompatibility's:*
+*List of known incompatibilities:*
 
 - MundoSK
-- scripting plugins in general
+- Scripting plugins in general
 - some mods
-- plugins that use ProtocoLib
 
-To figure out IF it's a plugin incompatibility the best thing to do is running your server with SkinsRestorer as the only plugin
+To figure out if it is a plugin incompatibility,
+the best thing to do is running your server with SkinsRestorer as the only plugin
 and see if it then works.
 If so, you can try adding plugins and check each time if the plugin still works.
-This way you
-can identify the plugin that might cause this.
+This way you can identify the plugin that might cause the issue.
 
 ### Server Incompatibility
 
-We don't support forge, only CatServer some times..
+We do not work on some Paper forks as well as some BungeeCord forks because they break the platforms API somehow.
+We have only limited support for forge servers because they are usually breaking things as well.
+Very commonly issues happen with:
 
-we also don't support FlameCord as they change the loginresult.Property somehow and the sourcecode can't be found.
+- Aegis
+- FlameCord
+- Magma
+- Mohist
+- SpongeForge
+- Cardboard
+
+We want to support these platforms, but we can't do it alone if you are a developer and want to help us,
+feel free to open a PR on our GitHub.
 
 ## Connection
 
@@ -111,7 +125,8 @@ Firewall issues - this is a email template copied from github:SkinsRestorer/Skin
 Dear Mc-Service provider,
 
 I believe that your firewall setup is restricting one of my plugins to work properly, namely, SkinsRestorer.
-In order to allow it to function properly, I need to be able to open new outgoing connections to specific HTTP API services. You can see the list of required traffic at https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Troubleshooting#firewall-passthrough-requirements.
+In order to allow it to function properly, I need to be able to open new outgoing connections to specific HTTP API services.
+You can see the list of required traffic at: https://skinsrestorer.net/docs/troubleshooting#firewall-pass-through-requirements
 
 I kindly request that you permit such traffic for all Minecraft hosting services associated with my account.
 
@@ -143,10 +158,10 @@ Or you can see [Firewall pass through requirements](#firewall-pass-through-requi
 > established connections. Your server must be able to connect to the other networks. SkinsRestorer doesn't** require
 > any incoming traffic from new connections to be accepted.
 
-| Address                           | protocol | port(s)     | Reason                                                                   |
+| Address                           | Protocol | Ports       | Reason                                                                   |
 |-----------------------------------|----------|-------------|--------------------------------------------------------------------------|
-| https://api.mojang.com/           | TCP      | 443, 53     | API to request player uuid                                               |
+| https://api.mojang.com/           | TCP      | 443, 53     | API to request player UUID                                               |
 | https://sessionserver.mojang.com/ | TCP      | 443, 53     | Skin data is fetched from this API                                       |
 | https://api.minetools.eu/         | TCP      | 443, 80, 53 | The main API that SkinsRestorer uses before falling back to Mojang's API |
-| https://api.ashcon.app/           | TCP      | 443, 53     | Backup API for uuid & skin                                               |
-| https://api.mineskin.org/         | TCP      | 443, 53     | API for skinurl & custom skins.                                          |
+| https://api.ashcon.app/           | TCP      | 443, 53     | Backup API for UUID and Skins                                            |
+| https://api.mineskin.org/         | TCP      | 443, 53     | API for generating skins from external links                             |
