--- a/pages/docs/troubleshooting/launcher-issues.mdx
+++ b/pages/docs/troubleshooting/launcher-issues.mdx
@@ -17,7 +17,8 @@ Fix issues with TLauncher overriding your client-side skin.
     The TLauncher brand has been acquired by a **shady company** and is no longer safe to use.
     They intentionally stole the brand name of the original TLauncher and are now using it to spread their malware.
 
-    For more information, watch the [video by TheMisterEpic](https://www.youtube.com/watch?v=SBTH9n6lz9o) about TLauncher.
+    For more information, watch the [video by TheMisterEpic](https://www.youtube.com/watch?v=SBTH9n6lz9o) about
+    TLauncher.
 </Callout>
 
 ### How to fix
