--- a/pages/docs/configuration.mdx
+++ b/pages/docs/configuration.mdx
@@ -8,11 +8,13 @@ The plugin should be able to run without extra configuration needed,
 but if you need to change the plugin behavior, you're in the right place here.
 
 <Callout type="info" emoji="ℹ️">
-    After changing the configuration, you need to either reload the plugin with the command `/sr reload` or restart the server.
+    After changing the configuration, you need to either reload the plugin with the command `/sr reload` or restart the
+    server.
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
-    If you run a proxy network (BungeeCord/Velocity), you need to have the exact same `config.yml` file on the proxy and all servers.
+    If you run a proxy network (BungeeCord/Velocity), you need to have the exact same `config.yml` file on the proxy and
+    all servers.
     If you make a change to the config on the proxy, you need to make the same change on all servers.
     Make sure to reload the plugin on the proxy and all servers after changing the configuration.
     The `/sr reload` command is only available on the proxy (Because all backend servers are in Proxy Mode),
