--- a/pages/docs/installation/velocity.mdx
+++ b/pages/docs/installation/velocity.mdx
@@ -14,7 +14,7 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
-    **Paper (or a fork) is suggested for Velocity**
+    Paper (or a fork of Paper) is suggested for Velocity
 </Callout>
 
 <Steps>
