--- a/pages/docs/integrations/discordsrv.mdx
+++ b/pages/docs/integrations/discordsrv.mdx
@@ -1,25 +1,32 @@
+import {Steps} from "nextra-theme-docs";
+
 # DiscordSRV
 
 SkinsRestorer skins can be used for DiscordSRV messages using the PlaceholderAPI integration.
 
-## Prepare your server
+## Setup instructions
 
-Ensure both SkinsRestorer and PlaceholderAPI are installed on your server and are working correctly.
+<Steps>
+    ### Prepare your server
+    Ensure [SkinsRestorer](/docs/installation), [DiscordSRV](https://www.spigotmc.org/resources/discordsrv.18494/) and [PlaceholderAPI](https://www.spigotmc.org/resources/placeholderapi.6245/) are installed on your server, are the latest version and are working correctly.
 
-## Configure DiscordSRV
+    ### Configure DiscordSRV
+    Open your DiscordSRV `config.yml` and search for the `Embed & webhook image/avatar url format` section.
+    The config setting looks like this:
 
-Open your DiscordSRV `config.yml` and search for the `Embed & webhook image/avatar url format` section.
-The config setting looks like this:
+    ```yaml
+    AvatarUrl: https://crafatar.com/avatars/{uuid-nodashes}.png?size={size}&overlay#{texture}
+    ```
 
-```yaml
-AvatarUrl: https://crafatar.com/avatars/{uuid-nodashes}.png?size={size}&overlay#{texture}
-```
+    You have to replace it with the following:
 
-You have to replace it with the following:
+    ```yaml
+    AvatarUrl: https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png
+    ```
 
-```yaml
-AvatarUrl: https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png
-```
+    ### Reload DiscordSRV
+    Run `/discord reload` to reload DiscordSRV.
 
-Then run `/discord reload` to reload DiscordSRV.
-Now all set avatars will be displayed in DiscordSRV messages! 🎉
+    ### That's it!
+    Now all SkinsRestorer avatars will be displayed in DiscordSRV messages! 🎉
+</Steps>
