Use code block for URL, so it can be copied easier

--- a/pages/docs/integrations/avatar-url.mdx
+++ b/pages/docs/integrations/avatar-url.mdx
@@ -18,7 +18,9 @@ Do you want to show a player's head in, for example, a Discord message sent by a
     Find the place where you can put a URL in the plugin. This is usually a config file or a message file.
     Put the following URL in the place where you want the avatar URL to be used:
 
-    `https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png`
+    ```yaml
+    https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png
+    ```
 
     ### Reload the plugin
     Reload the plugin to apply the changes.
