Add under construction disclaimers

--- a/pages/docs/configuration.mdx
+++ b/pages/docs/configuration.mdx
@@ -2,8 +2,10 @@ import {Callout} from "nextra-theme-docs";
 
 # Configuration
 
-The plugin tries to make using it simple.
-That's why there are few advanced configuration options.
+<Callout type="warning" emoji="🚧">
+    This page has outdated information and will be updated soon.
+</Callout>
+
 The plugin should be able to run without extra configuration needed,
 but if you need to change the plugin behavior, you're in the right place here.
 
