--- a/pages/docs/configuration/commands-permissions.mdx
+++ b/pages/docs/configuration/commands-permissions.mdx
@@ -2,6 +2,10 @@ import {Callout} from 'nextra-theme-docs'
 
 # Commands and Permissions
 
+<Callout type="warning" emoji="🚧">
+    This page has outdated information and will be updated soon.
+</Callout>
+
 Below is a list of commands and permissions. For each permission, you need to have the parent's permission. so for
 example:
 
