--- a/pages/docs/configuration/locale-translations.mdx
+++ b/pages/docs/configuration/locale-translations.mdx
@@ -2,6 +2,10 @@ import {Callout} from 'nextra-theme-docs'
 
 # Locale and Translations
 
+<Callout type="warning" emoji="🚧">
+    This page has outdated information and will be updated soon.
+</Callout>
+
 <Callout type="warning" emoji="⚠️">
     If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on the proxy.
 </Callout>
