--- a/pages/docs/development/storage.mdx
+++ b/pages/docs/development/storage.mdx
@@ -1,5 +1,9 @@
 # How SkinsRestorer stores data
 
+<Callout type="warning" emoji="🚧">
+    This page has outdated information and will be updated soon.
+</Callout>
+
 ## Why does SR need a .skin file?
 
 SkinsRestorer uses .skin files to keep a cached version of the skin on your server.
