--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -2,6 +2,10 @@ import {Callout} from "nextra-theme-docs";
 
 # Custom Skins
 
+<Callout type="warning" emoji="🚧">
+    This page has outdated information and will be updated soon.
+</Callout>
+
 Because SkinsRestorer doesn't have a public API,
 We've developed two tools for uploading custom png files to SkinsRestorer!
 
